# r0ket

./: .gitignore  Makefile  Makefile.inc  README  main.c  reinvoke_isp.c  sysdefs.h
basic/: basic.c  basic.h  reinvoke_isp.c  voltage.c
core/: Makefile  lpc134x.h  projectconfig.h  sysdefs.h  sysinit.c  sysinit.h
core/adc/: adc.c  adc.h
core/cmd/: cmd.c  cmd.h
core/cpu/: cpu.c  cpu.h
core/gpio/: gpio.c  gpio.h
core/i2c/: i2c.c  i2c.h
core/iap/: iap.c  iap.h
core/libc/: ctype.c  stdio.c  string.c
core/pmu/: pmu.c  pmu.h
core/pwm/: pwm.c  pwm.h
core/ssp/: ssp.c  ssp.h
core/systick/: systick.c  systick.h
core/timer16/: timer16.c  timer16.h
core/timer32/: timer32.c  timer32.h
core/uart/: uart.c  uart.h  uart_buf.c
core/usbcdc/: cdc.h  cdc_buf.c  cdc_buf.h  cdcuser.c  cdcuser.h  config.h  usb.h  usbcfg.h  usbcore.c  usbcore.h  usbdesc.c  usbdesc.h  usbhw.c  usbhw.h  usbreg.h  usbuser.c  usbuser.h
core/usbhid-rom/: usb.h  usbconfig.c  usbconfig.h  usbhid.c  usbhid.h
core/wdt/: wdt.c  wdt.h
default-files/: README  priv.key  pubx.key  puby.key
eeprom/: eeprom.c  eeprom.h
filesystem/: at45db041d.c  at45db041d.h  diskio.h  ffconf.h  iobase.h  mmc.c
firmware/: .gitignore  BRIDGE-PROTOCOL  LICENSE  Makefile  Makefile.inc  Makefile.util  README.building  SECRETS  SECRETS.release  SERIAL_DOKU  getkey.pl  main.c  release-all  sysdefs.h
firmware/applications/: Makefile  README  adc.c  bridge.c  bsx.c  cbitset.h  cdc.c  default.c  ecc.c  exe.c  executor.c  final.c  flame.c  font.c  fs.c  funk.c  iggy.c  initial.c  inputtest.c  l0dable.c  life.c  lilafisch.c  loadable.c  mandelbrot.c  mandelbrot2.c  menutest.c  minimal.c  mkfirmware  mkfirmware.pl  mktester  mkwrapper  remote.c  rockets.c  s.c  schneider.c  scroll.c  sec.c  serial.c  spaceinvaders.c  tester.c  (+3 more)
firmware/basic/: Makefile  basic.c  basic.h  byteorder.c  byteorder.h  config.c  config.h  crc.c  delayms.c  (+19 more)
hardware/: .gitignore  RFM12.lbr  eagle.scr  r0ket.sch  rakete-asym-rf.sch  rakete-asym.b#1  rakete-asym.b#2  rakete-asym.sch  rakete-sym7-rf.sch  rakete-sym7-wip.sch  router.ctl
lcd/: Makefile  backlight.c  comic15.c  comic15.h  decoder.c  dejavusans9.c  dejavusans9.h  dejavusansbold9.c  dejavusansbold9.h  dejavusanscondensed9.c  dejavusanscondensed9.h  dejavusansmono8.c  dejavusansmono8.h  dejavusansmonobold8.c  dejavusansmonobold8.h  display.c  display.h  fonts.h  orbitron14.c  orbitron14.h  render.c  render.h  smallfonts.c  smallfonts.h  ubuntu18.c  ubuntu18.h  vera11.c  vera11.h  vera17.c  vera17.h  vera23.c  vera23.h  veramono11.c  veramono11.h  veramono9.c  veramono9.h  veramonobold11.c  veramonobold11.h  veramonobold9.c  veramonobold9.h
loadable/: .gitignore  blinktest.c
lpc1xxx/: LPC13xx_handlers.c  LPC1xxx_startup.c  linkscript.ld
modules/: Makefile  README  bsx.c  default.c  eeprom.c  executor.c  fs.c  mandelbrot.c  menutest.c  mkwrapper  s.c  schneider.c  sec.c  spaceinvaders.c
openbeacon/lpc13xx/lpc-flash/: .gitignore  AUTHORS  configure.ac
openbeacon/lpc13xx/lpc-flash/src/: lpc-flash.c
simulat0r/: Makefile
simulat0r/gui/: CMakeLists.txt  qsimulat0r.cc  simulat0rthread.cc  simulat0rthread.h
tools/: .gitignore  42-nxp-flash.rules  Makefile  README.autoflash  autoflash-cygwin.sh  fdec.c  lpcfix.c  lpcrc.c  makefont.pl
usb/: Makefile  usbconfig.h  usbhid.h  usbmsc.c
vortrag/: hardware.tex
(+722 files in other folders)
